--- a/Homework/Homework.csproj
+++ b/Homework/Homework.csproj
@@ -200,34 +200,35 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\ValidateController.cs" />
     <Compile Include="Enums\Category.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="helper\EnumHelper.cs" />
     <Compile Include="Models\AccountBook.cs">
-      <DependentUpon>SkillTreeHomework.tt</DependentUpon>
+      <DependentUpon>AccountBookViewModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\AccountBookViewModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>AccountBookViewModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\AccountBookViewModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>AccountBookViewModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\AccountBookViewModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>AccountBookViewModel.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MoneyList.cs" />
     <Compile Include="Models\MoneyListDisplayModel.cs" />
-    <Compile Include="Models\SkillTreeHomework.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>SkillTreeHomework.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\SkillTreeHomework.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>SkillTreeHomework.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\SkillTreeHomework.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>SkillTreeHomework.edmx</DependentUpon>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -242,15 +243,15 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
-    <Content Include="Models\SkillTreeHomework.Context.tt">
+    <Content Include="Models\AccountBookViewModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>SkillTreeHomework.edmx</DependentUpon>
-      <LastGenOutput>SkillTreeHomework.Context.cs</LastGenOutput>
+      <DependentUpon>AccountBookViewModel.edmx</DependentUpon>
+      <LastGenOutput>AccountBookViewModel.Context.cs</LastGenOutput>
     </Content>
-    <Content Include="Models\SkillTreeHomework.tt">
+    <Content Include="Models\AccountBookViewModel.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>SkillTreeHomework.edmx</DependentUpon>
-      <LastGenOutput>SkillTreeHomework.cs</LastGenOutput>
+      <DependentUpon>AccountBookViewModel.edmx</DependentUpon>
+      <LastGenOutput>AccountBookViewModel.cs</LastGenOutput>
     </Content>
     <Content Include="Scripts\ai.0.15.0-build58334.js" />
     <Content Include="Scripts\ai.0.15.0-build58334.min.js" />
@@ -259,12 +260,12 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <EntityDeploy Include="Models\SkillTreeHomework.edmx">
+    <EntityDeploy Include="Models\AccountBookViewModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>SkillTreeHomework.Designer.cs</LastGenOutput>
+      <LastGenOutput>AccountBookViewModel.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <Content Include="Models\SkillTreeHomework.edmx.diagram">
-      <DependentUpon>SkillTreeHomework.edmx</DependentUpon>
+    <Content Include="Models\AccountBookViewModel.edmx.diagram">
+      <DependentUpon>AccountBookViewModel.edmx</DependentUpon>
     </Content>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
@@ -324,6 +325,9 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Views\Validate\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
