--- a/Homework/bin/Homework.dll.config
+++ b/Homework/bin/Homework.dll.config
@@ -12,6 +12,7 @@
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Homework-20160411044052.mdf;Initial Catalog=aspnet-Homework-20160411044052;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="SkillTreeHomework" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=Homework.Models.SkillTreeHomework;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="SkillTreeHomeworkEntities" connectionString="metadata=res://*/Models.SkillTreeHomework.csdl|res://*/Models.SkillTreeHomework.ssdl|res://*/Models.SkillTreeHomework.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\SkillTreeHomework.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SkillTreeHomeworkEntities1" connectionString="metadata=res://*/Models.AccountBookViewModel.csdl|res://*/Models.AccountBookViewModel.ssdl|res://*/Models.AccountBookViewModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\SkillTreeHomework.mdf;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
